<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
	<ImageView 
	    android:src="@drawable/logo_bg"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="60dp"
	    android:contentDescription="@string/default_content_description"/>
	<TextView
	    android:id="@+id/tvCopyright"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="10dp"
	    android:textColor="@color/green"
	    android:text="@string/welcome_copyright"/>
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_above="@id/tvCopyright"
	    android:textColor="@color/green"
	    android:text="@string/welcome_company_copyright"/>
</RelativeLayout>
