<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/basic_setting"
        android:textColor="@color/font_dark_gray"
        android:textSize="20sp" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/lightgray"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tvSpeakerLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speaker_level_setting"
            android:textColor="@color/font_gray"
            android:background="@color/transparent"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:contentDescription="@string/default_content_description"
                android:src="@drawable/volume" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/transparent"
                android:text="-"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/sbSpeakerLevel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:max="15"
                android:maxHeight="6px"
                android:minHeight="6px"
                android:progressDrawable="@drawable/seekbar_bg"
                android:thumb="@drawable/seekbar_thumb_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/transparent"
                android:text="+"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tvMicLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/transparent"
            android:text="@string/mic_level_setting"
            android:textColor="@color/font_gray"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:contentDescription="@string/default_content_description"
                android:src="@drawable/micphone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/transparent"
                android:text="-"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/sbMicLevel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/default_content_description"
                android:max="15"
                android:maxHeight="6px"
                android:minHeight="6px"
                android:progressDrawable="@drawable/seekbar_bg"
                android:thumb="@drawable/seekbar_thumb_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/transparent"
                android:text="+"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/other_setting"
        android:textColor="@color/font_dark_gray"
        android:textSize="20sp" >
    </TextView>
<TextView 
    android:id="@+id/tvLogout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:clickable="true"
    android:background="@drawable/default_reverse_selector"
    android:textSize="20sp"
    android:textColor="@color/red"
    android:gravity="center"
    android:text="@string/logout"/>
</LinearLayout>